Name:                diagrams-spiro
Version:             0.1
Synopsis:            Spiro curves for diagrams.
Homepage:            http://projects.haskell.org/diagrams/
License:             BSD3
License-file:        LICENSE
Author:              Ryan Yates
Maintainer:          fryguybob@gmail.com
Category:            Graphics
Build-type:          Simple
Cabal-version:       >=1.6
Source-repository head
  type:     darcs
  location: http://patch-tag.com/r/fryguybob/spiro-raw


Library
  Exposed-modules:     Diagrams.TwoD.Spiro
  Hs-source-dirs:      src
  Build-depends:       base >= 4 && < 5,
                       transformers > 0.2 && < 0.3,
                       mtl > 2.0 && < 2.1,
                       newtype >= 0.2 && < 0.3,
                       diagrams-core  >= 0.3 && < 0.4,
                       diagrams-lib   >= 0.3 && < 0.4,
                       diagrams-cairo >= 0.3 && < 0.4,
                       spiro-raw >= 0.1 && < 0.2,
                       vector-space >= 0.7 && < 0.8
  Other-modules:       Diagrams.TwoD.Spiro.PathContext
